--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
         "validation",
         "form"
     ],
-    "homepage": "https://github.com/mawuekom/laravel-custom-form-request",
+    "homepage": "https://github.com/mawuva/laravel-custom-form-request",
     "license": "MIT",
     "type": "library",
     "authors": [
@@ -24,9 +24,9 @@
     "require": {
         "php": "^7.4|^8.0",
         "illuminate/support": "^8.0",
-        "mawuekom/laravel-form-request": "dev-main",
-        "mawuekom/laravel-api-form-request": "dev-main",
-        "mawuekom/laravel-request-sanitizer": "dev-main"
+        "mawuekom/laravel-api-form-request": "^1.0",
+        "mawuekom/laravel-form-request": "^1.0",
+        "mawuekom/laravel-request-sanitizer": "^1.0"
     },
     "require-dev": {
         "orchestra/testbench": "^6.0",
